--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style type="text/tailwindcss">
         @theme {
+            --color-brand: rgba(233, 90, 8, 1);
             --color-text: rgba(37, 36, 50, 1);
             --color-subtitle: rgba(137, 135, 161, 1);
 
             --font-base: "Inter", sans-serif;
             --font-display: "Noto Serif", serif;
+
+            --spacing-base-bd-pad: 1rem;
+            --spacing-lg-bd-pad: 9.375rem;
+
           }
         </style>
     <link rel="stylesheet" href="styles.css" />
@@ -20,7 +25,7 @@
 
 <body class="pb-3.5 font-base text-color">
     <!-- header -->
-    <header class="flex items-center justify-between px-4 lg:px-[9.375rem]">
+    <header class="flex items-center justify-between px-base-bd-pad pt-3.5 lg:px-lg-bd-pad">
         <img class="w-16 lg:w-[136px]" src="./assets/logo.png" alt="Logo" />
         <nav class="">
             <ul class="flex items-center justify-between gap-12">
@@ -41,6 +46,23 @@
             </ul>
         </nav>
     </header>
+
+    <!-- main -->
+    <main>
+        <!-- banner -->
+        <section class="grid grid-cols-1 gap-7 pt-7 lg:grid-cols-2 lg:px-lg-bd-pad lg:pt-[7.5rem]">
+            <div class="order-2 px-base-bd-pad flex flex-col gap-3.5 lg:order-1 lg:justify-end lg:gap-3.5">
+                <h1 class="font-display font-bold text-2xl lg:text-[4rem]">ALWAYS <span
+                        class="text-brand">FRESH<br>FLOWERS</span></h1>
+                <p class="text-subtitle text-[14px] lg:text-[1.5rem]">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic blooms, we
+                    offer a wide variety of fresh flowers that are perfect for any occasion.
+                </p>
+            </div>
+            <img class="order-1 w-full lg:order-2 lg:pt-24" src="./assets/hero-flower.png" alt="Banner image" />
+        </section>
+    </main>
 </body>
 
 </html>
