--- a/index.html
+++ b/index.html
@@ -54,13 +54,31 @@
             <div class="order-2 px-base-bd-pad flex flex-col gap-3.5 lg:order-1 lg:justify-end lg:gap-3.5">
                 <h1 class="font-display font-bold text-2xl lg:text-[4rem]">ALWAYS <span
                         class="text-brand">FRESH<br>FLOWERS</span></h1>
-                <p class="text-subtitle text-[14px] lg:text-[1.5rem]">
+                <p class="text-subtitle text-sm lg:text-[1.5rem]">
                     Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
                     exotic blooms, we
                     offer a wide variety of fresh flowers that are perfect for any occasion.
                 </p>
             </div>
             <img class="order-1 w-full lg:order-2 lg:pt-24" src="./assets/hero-flower.png" alt="Banner image" />
+        </section>
+
+        <!-- our plants -->
+        <section class="px-base-bd-pad lg:pt-[7.5rem] lg:px-lg-bd-pad lg:flex lg:flex-col lg:gap-12">
+            <div class="pt-16 flex flex-col gap-4 items-center">
+                <h2 class="font-display text-2xl font-bold lg:text-[3.125rem]"><span class="text-brand">Our</span>
+                    Plants
+                </h2>
+                <p class="text-center text-sm text-subtitle lg:text-[1.375rem]">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                    <br>
+                    From classic roses to exotic blooms, we
+                    offer a wide variety of fresh.
+                </p>
+            </div>
+            <div>
+                list
+            </div>
         </section>
     </main>
 </body>
