--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>
 
         <!-- our plants -->
-        <section class="px-base-bd-pad lg:pt-[7.5rem] lg:px-lg-bd-pad lg:flex lg:flex-col lg:gap-12">
+        <section class="px-base-bd-pad pb-10 lg:pt-[7.5rem] lg:px-lg-bd-pad lg:flex lg:flex-col lg:gap-12">
             <div class="pt-16 flex flex-col gap-4 items-center">
                 <h2 class="font-display text-2xl font-bold lg:text-[3.125rem]"><span class="text-brand">Our</span>
                     Plants
@@ -76,8 +76,81 @@
                     offer a wide variety of fresh.
                 </p>
             </div>
-            <div>
-                list
+            <!-- cards grid -->
+            <div class="grid grid-cols-2 gap-x-5 gap-y-[1.875rem] lg:grid-cols-4">
+                <!-- a card -->
+                <div class="flex flex-col items-center justify-between gap-[1.875rem]">
+                    <img class="w-full" src="./assets/sample-flower-image.png" alt="card image">
+                    <div class="flex flex-col items-center">
+                        <p class="font-medium text-base leading-[150%]">Lily Blossom</p>
+                        <p class="font-bold leading-[150%]">20 USD</p>
+                    </div>
+                    <button class="bg-brand w-full py-[1.625rem] font-semibold text-base text-white">ADD TO
+                        CART</button>
+                </div><!-- a card -->
+                <div class="flex flex-col items-center justify-between gap-[1.875rem]">
+                    <img class="w-full" src="./assets/sample-flower-image.png" alt="card image">
+                    <div class="flex flex-col items-center">
+                        <p class="font-medium text-base leading-[150%]">Lily Blossom</p>
+                        <p class="font-bold leading-[150%]">20 USD</p>
+                    </div>
+                    <button class="bg-brand w-full py-[1.625rem] font-semibold text-base text-white">ADD TO
+                        CART</button>
+                </div><!-- a card -->
+                <div class="flex flex-col items-center justify-between gap-[1.875rem]">
+                    <img class="w-full" src="./assets/sample-flower-image.png" alt="card image">
+                    <div class="flex flex-col items-center">
+                        <p class="font-medium text-base leading-[150%]">Lily Blossom</p>
+                        <p class="font-bold leading-[150%]">20 USD</p>
+                    </div>
+                    <button class="bg-brand w-full py-[1.625rem] font-semibold text-base text-white">ADD TO
+                        CART</button>
+                </div><!-- a card -->
+                <div class="flex flex-col items-center justify-between gap-[1.875rem]">
+                    <img class="w-full" src="./assets/sample-flower-image.png" alt="card image">
+                    <div class="flex flex-col items-center">
+                        <p class="font-medium text-base leading-[150%]">Lily Blossom</p>
+                        <p class="font-bold leading-[150%]">20 USD</p>
+                    </div>
+                    <button class="bg-brand w-full py-[1.625rem] font-semibold text-base text-white">ADD TO
+                        CART</button>
+                </div><!-- a card -->
+                <div class="flex flex-col items-center justify-between gap-[1.875rem]">
+                    <img class="w-full" src="./assets/sample-flower-image.png" alt="card image">
+                    <div class="flex flex-col items-center">
+                        <p class="font-medium text-base leading-[150%]">Lily Blossom</p>
+                        <p class="font-bold leading-[150%]">20 USD</p>
+                    </div>
+                    <button class="bg-brand w-full py-[1.625rem] font-semibold text-base text-white">ADD TO
+                        CART</button>
+                </div><!-- a card -->
+                <div class="flex flex-col items-center justify-between gap-[1.875rem]">
+                    <img class="w-full" src="./assets/sample-flower-image.png" alt="card image">
+                    <div class="flex flex-col items-center">
+                        <p class="font-medium text-base leading-[150%]">Lily Blossom</p>
+                        <p class="font-bold leading-[150%]">20 USD</p>
+                    </div>
+                    <button class="bg-brand w-full py-[1.625rem] font-semibold text-base text-white">ADD TO
+                        CART</button>
+                </div><!-- a card -->
+                <div class="flex flex-col items-center justify-between gap-[1.875rem]">
+                    <img class="w-full" src="./assets/sample-flower-image.png" alt="card image">
+                    <div class="flex flex-col items-center">
+                        <p class="font-medium text-base leading-[150%]">Lily Blossom</p>
+                        <p class="font-bold leading-[150%]">20 USD</p>
+                    </div>
+                    <button class="bg-brand w-full py-[1.625rem] font-semibold text-base text-white">ADD TO
+                        CART</button>
+                </div><!-- a card -->
+                <div class="flex flex-col items-center justify-between gap-[1.875rem]">
+                    <img class="w-full" src="./assets/sample-flower-image.png" alt="card image">
+                    <div class="flex flex-col items-center">
+                        <p class="font-medium text-base leading-[150%]">Lily Blossom</p>
+                        <p class="font-bold leading-[150%]">20 USD</p>
+                    </div>
+                    <button class="bg-brand w-full py-[1.625rem] font-semibold text-base text-white">ADD TO
+                        CART</button>
+                </div>
             </div>
         </section>
     </main>
