feat(footer): Add responsive Footer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     variety of fresh flowers that are perfect for any occasion.
                 </p>
             </div>
-            <img class="order-1 w-full lg:order-2 lg:pt-24" src="./assets/hero-flower.png" alt="Banner image" />
+            <img class="order-1 max-w-full lg:order-2 lg:pt-24" src="./assets/hero-flower.png" alt="Banner image" />
         </section>
 
         <!-- our plants -->
@@ -273,7 +273,7 @@
 
     <footer class="w-full">
         <!-- newsletter -->
-        <section class="bg-[url(./assets/news-letter-bg.png)] pt-28 pb-16 flex justify-center">
+        <section class="bg-[url(./assets/news-letter-bg.png)] pt-28 pb-24 flex justify-center">
             <div class="w-10/12 flex flex-col items-center gap-6 lg:w-8/12">
                 <h2 class="font-display font-bold text-xl text-white lg:text-[3.125rem]">Join the colorful Bunch</h2>
                 <form class="w-full flex">
@@ -284,7 +284,42 @@
             </div>
         </section>
 
-        <!--  -->
+        <!-- actual footer -->
+        <section class="py-14 px-base-bd-pad text-subtitle flex flex-col gap-5 lg:px-lg-bd-pad lg:grid lg:grid-cols-4">
+            <div class="flex flex-col gap-4 justify-start items-start">
+                <img src="./assets/logo.png" alt="logo" />
+                <p class="leading-[1.5rem]">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                </p>
+            </div>
+            <ul class="flex flex-col gap-5">
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Blog</li>
+                <li>FAQ</li>
+                <li>Contact Us</li>
+            </ul>
+            <ul class="flex flex-col gap-5">
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Privacy Policy</li>
+                <li>Terms of Service</li>
+                <li>Help Center</li>
+            </ul>
+            <div class="flex gap-8 justify-start items-start">
+                <a href="#">
+                    <img src="./assets/icon-linkedin.png" alt="icon-linkedin">
+                </a>
+                <a href="#">
+                    <img src="./assets/icon-twitter.png" alt="icon-twitter">
+                </a>
+                <a href="#">
+                    <img src="./assets/icon-facebook.png" alt="icon-facebook">
+                </a>
+                <a href="#">
+                    <img src="./assets/icon-youtube.png" alt="icon-youtube">
+                </a>
+            </div>
+        </section>
     </footer>
 </body>
 
